fix(filelist): update filelist alignment

--- a/css/src/components/fileList.css
+++ b/css/src/components/fileList.css
@@ -15,19 +15,22 @@
 }
 .FileItem-fileContent {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   min-width: 0;
+  width:100%
 }
 .FileItem-actions {
   display: flex;
-  justify-content: center;
+  /* justify-content: end; */
   align-items: center;
+  margin-right: 12px;
 }
 .FileItem-file {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  width: 100%
 }
 .FileItem-size {
   margin-right: var(--spacing);
